fix: github actions

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - '*' # all branches
       - '!main' # exclude main branch
+      - '!master' # exclude main branch
 
 jobs:
   changelog:
