--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,15 @@
 ---
 repos:
-  - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: detect-private-key
       - id: check-merge-conflict
       - id: no-commit-to-branch
-      - id: check-yaml
-  - repo: https://github.com/commitizen-tools/commitizen
-    rev: master
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v2.4.0
     hooks:
-      - id: commitizen
+      - id: conventional-pre-commit
         stages: [commit-msg]
