--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           extra_plugins: |
             @semantic-release/changelog
+            conventional-changelog-conventionalcommits
+            @semantic-release/commit-analyzer
             @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
