--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,37 @@
-# https://github.com/marketplace/actions/action-for-semantic-release
 name: Release
 on:
   push:
     branches:
-      - main
       - master
+
+permissions:
+  contents: read # for checkout
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # to be able to publish a GitHub release
+      issues: write # to be able to comment on released issues
+      pull-requests: write # to be able to comment on released pull requests
+      id-token: write # to enable use of OIDC for npm provenance
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: false
-      - name: Semantic-release
-        uses: cycjimmy/semantic-release-action@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          extra_plugins: |
-            @semantic-release/changelog
-            conventional-changelog-conventionalcommits
-            @semantic-release/commit-analyzer
-            @semantic-release/git
+          node-version: "lts/*"
+      - name: Install dependencies
+        run: npm clean-install
+      - name: Install plugins
+        run: npm install -g semantic-release @semantic-release/github @semantic-release/changelog conventional-changelog-conventionalcommits @semantic-release/commit-analyzer @semantic-release/git
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
+      - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.SEMRELEASE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
