chore: Update .releaserc

--- a/.releaserc
+++ b/.releaserc
@@ -15,7 +15,7 @@
                         "label": "Vagrant file"
                     },
                     {
-                        "path": "scripts/",
+                        "path": "scripts/**",
                         "label": "Provisioning scripts"
                     }
                 ]
